# youtube_search

./: .drone.yml  README.md  docker-compose.yml  manifest  mkdocs.yml  pyproject.toml  setup.cfg
.dependabot/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-approve-pr.yml  main.yml  stale.yml
db/: README.md  schema.sql
db/migrations/: 20181002180913_create_table.sql  20210618190128_add_video_table.sql
sample/: __init__.py  app.py
sample/api/: sample.py
sample/store/: __init__.py  repos.py
sample/store/models/: user.py
sample/utils/: config.py  log.py  schema.py
sample/worker/: __init__.py  processor.py
sample/worker/jobs/: __init__.py  users.py
sqs/: Dockerfile  setup_sqs.py
tests/: conftest.py
tests/api/: test_sample.py  test_util.py
youtube/: __init__.py  app.py
youtube/api/: search.py
youtube/api/resources/: video_resource.py
youtube/cron/: search.py
youtube/domain/models/: video.py
youtube/domain/services/: video_service.py
youtube/exapi/: youtube.py
youtube/store/: __init__.py
youtube/store/models/: base.py  video.py
youtube/store/repo/: utils.py  video.py
youtube/utils/: config.py  flask.py  log.py  schema.py
